fix: experience dates not showing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,11 +3,13 @@
 :root {
   --background: #495057;
   --foreground: #343a40;
+  --primary: #f8f9fa;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-primary: var(--primary);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
@@ -16,6 +18,7 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --primary: #a5d8ff;
   }
 }
 
